--- a/change-recovery.html
+++ b/change-recovery.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container pt-3">
-        <h1 class="text-center">Steem Account Recovery</h1><hr>
+        <h1 class="text-center">Hive Account Recovery</h1><hr>
         <h2 class="text-center mb-5">Change Recovery Account</h2>
 
 		<div class="row">
