--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/app.css">
-	<title>Steem Account Recovery</title>
+	<title>Hive Account Recovery</title>
 </head>
 <body>
     <div class="container pt-3">
-        <h1 class="text-center mb-5">Steem Account Recovery</h1>
+        <h1 class="text-center mb-5">Hive Account Recovery</h1>
         <hr>
 
         <div class="row">
@@ -23,7 +23,7 @@
                 <a href="request-recovery.html" class="box green">
                     Request Recovery
                 </a>
-                <p>If you are trusty or recovery account of any other Steem account, this is for you.</p>
+                <p>If you are trusty or recovery account of any other Hive account, this is for you.</p>
             </div>
             <div class="col-md-4 text-center">
                 <a href="change-recovery.html" class="box red">
