--- a/change-recovery.html
+++ b/change-recovery.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="css/app.css">
-	<title>Steem Account Recovery - Change Recovery Account</title>
+	<title>Hive Account Recovery - Change Recovery Account</title>
 </head>
 <body>
 	<div class="container pt-3">
@@ -22,13 +22,13 @@
                     <div class="form-group">
                         <label for="change-rec-atr">Account To Recover</label>
                         <input type="text" name="change-rec-atr" id="change-rec-atr" class="form-control" autocomplete="no">
-                        <p class="form-text text-muted">Steem username of account you are trying to change recovery account.</p>
+                        <p class="form-text text-muted">Hive username of account you are trying to change recovery account.</p>
                     </div>
 
                     <div class="form-group">
                         <label for="change-rec-new">New Recovery Account</label>
                         <input type="text" name="change-rec-new" id="change-rec-new" class="form-control" autocomplete="no">
-                        <p class="form-text text-muted">Steem username of the new recovery account. <span class="text-info">Be careful this account can request account recovery.</span></p>
+                        <p class="form-text text-muted">Hive username of the new recovery account. <span class="text-info">Be careful this account can request account recovery.</span></p>
                     </div>
                     
                     <div class="form-group">
